# faust-macrogen

./: .gitattributes  .gitignore  .gitmodules  DATAMODEL.md  MANIFEST.in  Pipfile  README-Graphviewer.md  README.md  bibscores.tsv  bootstrap-graphviewer.sh  build.gradle  convert_table.py  dates.py  datings.py  environment.yml  experiments.py  faust.ini  faust_logging.py  graph.py  igraph_wrapper.py  inscription_order.py  logging.yaml  macrogenesis.py  main.py  mergestats.py  pyproject.toml  pytest.ini  report.py  setup.py  styles.yaml  sync-deps.py  test_dates.py  test_main.py  test_uris.py  uri-corrections.csv  uris.py  visualize.py
attic/: genetic_data_transcripts.py  graph.py  visualize.py
buildSrc/src/main/groovy/: MacrogenExec.groovy
edition-data/: README.md  extract-from-build.sh  uris.json
edition-data/www/data/: genetic_bar_graph.json
expdata/: details_reverse-inline.csv  details_reverse.csv  details_single-copy-copy.csv  details_single-copy-farthest.csv  details_single-copy-nearest.csv  details_single-copy.csv  details_single-none.csv  details_single-orphan.csv  details_split-inline-low.csv  details_split-inline.csv  details_split-none.csv  experiments.xlsx  positions.csv
graphviewer/: README.md  graphviewer.py
graphviewer/templates/: faustedition.html  form.html  help.html
src/graphviewer/: graphviewer.py  gvfa.py
src/graphviewer/templates/: faustedition.html  form.html  help.html
src/macrogen/: __init__.py  bibliography.py  config.py  convert_table.py  dates.py  datings.py  diff.py  faust.py  fes.py  graph.py  graphutils.py  igraph_wrapper.py  logging.py  main.py  report.py  splitgraph.py  timeline.html  uris.py  visualize.py  witnesses.py
src/macrogen/etc/: bibscores.tsv  default.yaml  graphviz_attrs.yaml  logging.yaml  styles.yaml  uri-corrections.csv
tests/: datings_test.py  skiptest_dates.py  test_bibliography.py  test_config.py  test_fes.py  test_graph.py  test_igraph_wrapper.py  test_main.py  test_report_generic.py  test_uris.py  test_witnesses.py
util_scripts/: convert_table.py  dates.py
utils/: Diffs.ipynb  README.md  experiments.py  mergestats.py  runs.lst
